--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
         elder_user_id: userId,
         elder_name: userName,
         schedule_time: schedule_time, 
-        schedule_note: note,
+        event_id: event,  // 行程提醒
+        schedule_note: note,  // 備註
         is_reminded: false
       }])
 
@@ -705,3 +706,4 @@
   </script>
 </body>
 </html>
+
